--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -4,7 +4,6 @@
     "Opinionated Vue3 + Vite Starter Template": "",
     "What\\'s your name ?": "",
     "What's your name ?": "",
-    "GO": "",
     "Hi, {name} !": "",
     "Dynamic route demo": "",
     "Back": "",
@@ -13,5 +12,6 @@
     "Change languages": "",
     "Also known as": "",
     "About": ""
-  }
+  },
+  "HelloWorld.GO": ""
 }
