--- a/app/locales/fr.json
+++ b/app/locales/fr.json
@@ -4,7 +4,6 @@
     "Opinionated Vue3 + Vite Starter Template": "Template d'appli Vue3 + Vite \"opinioné\"/dogmatique",
     "What\\'s your name ?": "Comment t'appelles-tu ?",
     "What's your name ?": "Comment t'appelles-tu ?",
-    "GO": "Essayer",
     "Hi, {name} !": "Salut, {name}!",
     "Dynamic route demo": "Démo de route dynamique",
     "Back": "Retour",
@@ -13,5 +12,6 @@
     "Change languages": "Changer de langue",
     "About": "À propos",
     "Also known as": "Aussi connu sous le nom de"
-  }
+  },
+  "HelloWorld.GO": ""
 }
